# test_assignment

./: README.md
test_assignment/: .black.toml  .env  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  ruff.toml
test_assignment/.github/workflows/: django_ci_cd.yml
test_assignment/commands/: start_server_dev.sh  start_server_prod.sh
test_assignment/src/: manage.py
test_assignment/src/account/: admin.py  apps.py  auth_backend.py  forms.py  managers.py  models.py  pipeline.py  urls.py  views.py
test_assignment/src/account/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_phone_number.py  0003_alter_user_options.py  0004_alter_user_is_active.py  0005_alter_userprofile_phone_number.py  0006_delete_userprofile.py  0007_userprofile.py  0008_userprofile_avatar_userprofile_date_joined_and_more.py  0009_remove_userprofile_user_delete_proxyuser_and_more.py  0010_proxyuser_userprofile.py  0011_rename_userprofile_profile.py
test_assignment/src/account/services/: emails.py  signals.py  verify_2fa_otp.py
test_assignment/src/account/tests/: common_test.py  test_auth_user.py  test_registration_user.py
test_assignment/src/common/: mixins.py
test_assignment/src/config/: urls.py
test_assignment/src/core/: documents.py  models.py  urls.py  views.py
test_assignment/src/images/: admin.py  models.py  urls.py  views.py
test_assignment/src/subscriptions/: admin.py  models.py  urls.py  views.py
test_assignment/src/templates/: 403.html  404.html  500.html  502.html  503.html
(+70 files in other folders)
