[tool.poetry]
name = "test-assignment"
version = "0.1.0"
description = ""
authors = ["Dima Birilko <sauberr10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5"
pillow = "^10.4.0"
ruff = "^0.5.7"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
django-extensions = "^3.2.3"
django-phonenumber-field = "^8.0.0"
pycountry = "^24.6.1"
django-phonenumbers = "^1.0.1"
django-jet-reboot = "^1.3.7"
google-api-python-client = "1.4.1"
feedparser = "^6.0.11"
djangorestframework = "^3.15.2"
faker = "^27.0.0"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
django-inlinecss-redux = "^0.4.0"
django-recaptcha = "^4.0.0"
python-dotenv = "^1.0.1"
django-elasticsearch-dsl = "^8.0"
sentry-sdk = "^2.13.0"
django-prometheus = "^2.3.1"
gunicorn = "^23.0.0"
drf-yasg = "^1.21.7"
setuptools = "^73.0.1"
requests = "^2.32.3"
django-debug-toolbar = "^4.4.6"
social-auth-app-django = "^5.4.2"
pyotp = "^2.9.0"
qrcode = "^8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
